Change spacer size policy

--- a/hw_1/ui/a_add_ui_form.ui
+++ b/hw_1/ui/a_add_ui_form.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>924</width>
-    <height>807</height>
+    <height>808</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -386,7 +386,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
                <x>0</x>
                <y>0</y>
                <width>437</width>
-               <height>510</height>
+               <height>511</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1539,6 +1539,9 @@ li.checked::marker { content: &quot;\2612&quot;; }
                    <spacer name="horizontalSpacer_3">
                     <property name="orientation">
                      <enum>Qt::Horizontal</enum>
+                    </property>
+                    <property name="sizeType">
+                     <enum>QSizePolicy::Fixed</enum>
                     </property>
                     <property name="sizeHint" stdset="0">
                      <size>
